[gd_scene load_steps=5 format=3 uid="uid://babfa7hfe44ty"]

[ext_resource type="Script" path="res://gameObjects/player/playerWeapons/rifle/rifle.gd" id="1_q4em7"]
[ext_resource type="Texture2D" uid="uid://chpfq2xp2govv" path="res://art/Custom/rifle.png" id="1_uu7kv"]
[ext_resource type="AudioStream" uid="uid://c36bu85ls085e" path="res://sfx/Space_Ambience_and_Sound_Pack/Laser_And_Laser_Gun/Laser_Gun_Load.wav" id="3_3gt04"]
[ext_resource type="AudioStream" uid="uid://beb2007wqm42q" path="res://sfx/Space_Ambience_and_Sound_Pack/Laser_And_Laser_Gun/Laser_Gun_Fire_2.wav" id="4_1ywfg"]

[node name="rifle" type="Node2D"]
script = ExtResource("1_q4em7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_uu7kv")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="timeoutTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="SFX" type="Node" parent="."]

[node name="readySound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("3_3gt04")
bus = &"SFX"

[node name="shootSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_1ywfg")
volume_db = -32.296

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="timeoutTimer" to="." method="_on_timeout_timer_timeout"]
